; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_parse_diff_color_slot.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_parse_diff_color_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"plain\00", align 1
@DIFF_CONTEXT = common dso_local global i32 0, align 4
@color_diff_slots = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @parse_diff_color_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_diff_color_slot(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32 @strcasecmp(i8* %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @DIFF_CONTEXT, align 4
  store i32 %8, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @color_diff_slots, align 4
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @LOOKUP_CONFIG(i32 %10, i8* %11)
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %9, %7
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @strcasecmp(i8*, i8*) #1

declare dso_local i32 @LOOKUP_CONFIG(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
